--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,166 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  --background-bluedark: #062136;
+  --typography-bluedark: #062136;
+  --primary-bluedark: #1b3641;
+  --background-white: #fcfcfc;
+  --primary-yellow: #f5d133;
+  --primary-black: #0b0c0c;
+  --system-default-10: #f8f8f8;
+  --system-default-20: #dedede;
+  --background-whitegrey: #f4f4f6;
+  --secondary-red: #961c1c;
+  --typography-black: #161717;
+  --typography-black-20: rgba(27, 54, 65, 0.2);
+  --transition-dur-and-func: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  --typography-white: #f8f8f8;
+  --typography-grey: #c3c4c4;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+.swal {
+  font-family: "Montserrat", sans-serif !important;
 }
-a:hover {
-  color: #535bf2;
+
+.swal-title {
+  color: #062136;
+  margin-bottom: 8px !important;
+}
+
+.swal-text {
+  color: #062136;
+  max-width: 420px;
+  padding: 0 10px !important;
+  text-align: center;
+}
+
+.swal-modal {
+  border-radius: 16px;
+}
+
+.swal-icon {
+  border-width: 3px;
+  margin-bottom: 0px;
+}
+
+.swal-icon--success__line--long {
+  height: 3px;
+}
+.swal-icon--success__line--tip {
+  height: 3px;
+}
+
+.swal-icon--success__line--long {
+  right: 6px;
+}
+
+.swal-icon--error__line--left {
+  height: 3px;
+}
+.swal-icon--error__line--right {
+  height: 3px;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  font-family: "Montserrat", sans-serif;
+  background-color: var(--background-whitegrey);
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+img {
+  display: block;
+}
+
+h1,
+h2,
+h3,
+h4,
+p,
+ul,
+li {
+  list-style: none;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+img {
+  display: block;
+  max-width: 100%;
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+.is-hidden {
+  display: none;
+}
+
+b {
+  font-weight: 600;
+}
+
+textarea {
+  resize: none;
+}
+
+.container {
+  width: 100%;
+  max-width: 375px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 24px;
+  padding-right: 24px;
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+    padding-left: 40px;
+    padding-right: 40px;
   }
-  a:hover {
-    color: #747bff;
+}
+
+@media screen and (min-width: 1440px) {
+  .container {
+    max-width: 1440px;
+    padding-left: 80px;
+    padding-right: 80px;
   }
-  button {
-    background-color: #f9f9f9;
+}
+
+@media screen and (min-width: 1920px) {
+  .container {
+    max-width: 1920px;
+    padding-left: 120px;
+    padding-right: 120px;
   }
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
