--- a/src/index.css
+++ b/src/index.css
@@ -1,66 +1,19 @@
 :root {
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  --background-bluedark: #062136;
-  --typography-bluedark: #062136;
-  --primary-bluedark: #1b3641;
-  --background-white: #fcfcfc;
-  --primary-yellow: #f5d133;
-  --primary-black: #0b0c0c;
-  --system-default-10: #f8f8f8;
-  --system-default-20: #dedede;
-  --background-whitegrey: #f4f4f6;
-  --secondary-red: #961c1c;
-  --typography-black: #161717;
-  --typography-black-20: rgba(27, 54, 65, 0.2);
-  --transition-dur-and-func: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  --typography-white: #f8f8f8;
-  --typography-grey: #c3c4c4;
-}
+  --white: #ffffff;
+  --black: #2f2f2f;
+  --dark-blue: #407bff;
 
-.swal {
-  font-family: "Montserrat", sans-serif !important;
-}
+  --light-blue-1: #ecf2ff;
+  --light-blue-2: #d7e3ff;
+  --light-blue-2: #9ebbff;
+  --orange: #ff9d43;
+  --red: #ef5050;
 
-.swal-title {
-  color: #062136;
-  margin-bottom: 8px !important;
-}
+  --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-.swal-text {
-  color: #062136;
-  max-width: 420px;
-  padding: 0 10px !important;
-  text-align: center;
-}
-
-.swal-modal {
-  border-radius: 16px;
-}
-
-.swal-icon {
-  border-width: 3px;
-  margin-bottom: 0px;
-}
-
-.swal-icon--success__line--long {
-  height: 3px;
-}
-.swal-icon--success__line--tip {
-  height: 3px;
-}
-
-.swal-icon--success__line--long {
-  right: 6px;
-}
-
-.swal-icon--error__line--left {
-  height: 3px;
-}
-.swal-icon--error__line--right {
-  height: 3px;
+  --medium: 500;
+  --bold: 700;
+  --regular: 400;
 }
 
 * {
@@ -72,8 +25,7 @@ html {
 }
 
 body {
-  font-family: "Montserrat", sans-serif;
-  background-color: var(--background-whitegrey);
+  font-family: "Roboto", sans-serif;
 }
 
 img {
@@ -91,6 +43,14 @@ li {
   margin-top: 0;
   margin-bottom: 0;
   padding: 0;
+}
+
+.list {
+  list-style-type: none;
+}
+
+.link {
+  text-decoration: none;
 }
 
 a {
@@ -127,6 +87,14 @@ textarea {
   padding-right: 24px;
 }
 
+@media screen and (min-width: 320px) {
+  .container {
+    max-width: 320px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .container {
     max-width: 768px;
@@ -140,14 +108,6 @@ textarea {
     max-width: 1440px;
     padding-left: 80px;
     padding-right: 80px;
-  }
-}
-
-@media screen and (min-width: 1920px) {
-  .container {
-    max-width: 1920px;
-    padding-left: 120px;
-    padding-right: 120px;
   }
 }
 
