--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ html {
 }
 
 body {
-  font-family: "Roboto", sans-serif;
+  margin: 0;
 }
 
 img {
@@ -39,12 +39,22 @@ h4,
 p,
 ul,
 li {
+  font-family: "Roboto", sans-serif;
+  color: var(--black);
+  font-style: normal;
   list-style: none;
   margin-top: 0;
   margin-bottom: 0;
   padding: 0;
 }
-
+p {
+  color: var(--black);
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.25;
+}
 .list {
   list-style-type: none;
 }
@@ -86,7 +96,13 @@ textarea {
   padding-left: 24px;
   padding-right: 24px;
 }
-
+@media screen and (min-width: 1440px) {
+  .container {
+    max-width: 1440px;
+    padding-left: 80px;
+    padding-right: 80px;
+  }
+}
 @media screen and (min-width: 320px) {
   .container {
     max-width: 320px;
@@ -100,14 +116,6 @@ textarea {
     max-width: 768px;
     padding-left: 40px;
     padding-right: 40px;
-  }
-}
-
-@media screen and (min-width: 1440px) {
-  .container {
-    max-width: 1440px;
-    padding-left: 80px;
-    padding-right: 80px;
   }
 }
 
