--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
   --white: #ffffff;
   --black: #2f2f2f;
   --dark-blue: #407bff;
+  --grey: #8f8f8f;
 
   --light-blue-1: #ecf2ff;
   --light-blue-2: #d7e3ff;
