--- a/src/index.css
+++ b/src/index.css
@@ -113,30 +113,31 @@ textarea {
   max-width: 375px;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 24px;
-  padding-right: 24px;
+  /* padding-left: 24px;
+  padding-right: 24px; */
 }
 
 @media screen and (min-width: 320px) {
   .container {
     max-width: 320px;
-    padding-left: 20px;
-    padding-right: 20px;
+    /* padding-left: 20px;
+    padding-right: 20px; */
   }
 }
 
 @media screen and (min-width: 768px) {
   .container {
     max-width: 768px;
-    padding-left: 32px;
-    padding-right: 32px;
+    /* padding-left: 32px;
+    padding-right: 32px; */
   }
 }
 @media screen and (min-width: 1440px) {
   .container {
     max-width: 1440px;
-    padding-left: 112px;
-    padding-right: 112px;
+    padding-left: 90px;
+    padding-right: 90px;
+    /* margin: 0; */
   }
 }
 .visually-hidden {
