--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
   --light-blue-1: #ecf2ff;
   --light-blue-2: #d7e3ff;
   --light-blue-3: #9ebbff;
+  --light-blue-4:#8BAEFF;
   --orange: #ff9d43;
   --red: #ef5050;
 
